--- a/src/app/serie/serie.component.html
+++ b/src/app/serie/serie.component.html
@@ -1,3 +1,17 @@
-<p>
-  serie works!
-</p>
+<!-- Navbar -->
+<nav class="navbar bg-primary" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img
+        src="https://freepngimg.com/download/gift/71372-tv-logo-television-old-android-free-download-image.png"
+        alt="Logo"
+        width="30"
+        height="24"
+        class="d-inline-block align-text-top"
+      />
+      TV Shows
+    </a>
+  </div>
+</nav>
+
+<app-serie-list></app-serie-list>
